# Rust_Cool

./: get_schema.sh  test.sh
crates/models/: Cargo.toml
crates/models/src/: db.rs  error.rs  lib.rs  note.rs  scan.rs  selling_partner_key.rs  selling_partner_key_marketplaces.rs  user.rs
crates/models/src/repo/: mod.rs  notes_repo.rs  scans_repo.rs  selling_partner_key_marketplaces_repo.rs  selling_partner_key_repo.rs  users_repo.rs
crates/models/tests/: models.rs  schema.sql
crates/rs_xlsx/: Cargo.toml
crates/rs_xlsx/fixtures/: request.json  request_with_custom_col.json  request_with_custom_col2.json
crates/rs_xlsx/src/: app.rs  error.rs  lib.rs  main.rs  middleware.rs
crates/rs_xlsx/src/handlers/: export_xlsx.rs  mod.rs  not_found.rs
crates/rs_xlsx/src/handlers/enrich_pricing/: enrich_pricing_request.rs  enrich_pricing_result.rs  enrich_pricing_util.rs  mod.rs
crates/rs_xlsx/src/inbound_eligibility/: cache.rs  codes.rs  mod.rs
crates/rs_xlsx/src/new_key_cache/: key_factory.rs  key_limiter.rs  mod.rs  sts_factory.rs
crates/rs_xlsx/src/new_key_cache/key_cache/: api_call.rs  mod.rs  throttling.rs
crates/rs_xlsx/src/populate/: insert.rs  mod.rs  populate_columns.rs
crates/rs_xlsx/src/product/: mod.rs  small_and_light_eligibility_reasons.rs
crates/rs_xlsx/src/result_request/: filter.rs  mod.rs
crates/rs_xlsx/src/results/: mod.rs  table_type.rs
crates/rs_xlsx/src/source/: local_gzipped_json_store.rs  mod.rs  postgres_store.rs  remote_gzipped_json_store.rs
crates/rs_xlsx/src/usage_tracker/: lock.rs  lua_scripts.rs  mod.rs
crates/rs_xlsx/src/xlsx/: columns.rs  coords.rs  display.rs  marketplace_helper.rs  mod.rs  options_builder.rs  xlsx_builder.rs
crates/rs_xlsx/src/xlsx/format/: col_visitor.rs  colors.rs  formatters.rs  mod.rs  money_builder.rs  numbers.rs
crates/rs_xlsx/src/xlsx/formula/: config.rs  formula_item.rs  mod.rs
