[package]
name = "rs_models"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time"] }
thiserror = "1.0.43"
libxlsxwriter-sys = "1.1.4"
log = "0.4.19"
bindgen = "0.65.1"
clang = { version = "2.0.0", features = ["runtime", "clang_8_0"] }
clang-sys = { version = "1.6.1", features = ["runtime", "clang_8_0"] }
marketplaces = { git = "https://git@github.com/rocketsource/marketplaces.git", branch = "master" }


[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
dotenvy = "0.15.7"
