[package]
name = "rs_xlsx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rs_xlsx"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_models = { path = "../models" }
dotenvy = "0.15.7"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
xlsxwriter = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = { version = "0.4.23", features = ["serde"] }
actix-web = "4.3.1"
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time"] }
# @todo remove this in favor of async version
flate2 = "1.0.26"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"
regex = "1.9.1"
lazy_static = "1.4.0"
async-trait = "0.1.71"
composable_query_builder = { git = "https://github.com/tmyers273/composable_query_builder", branch = "main" }
redis = { version = "0.23.0", features = ["tokio-comp","connection-manager"] }
dashmap = "5.5.0"
uuid = { version = "1.4.1", features = ["v4"] }
itertools = "0.11.0"
rust-s3 = "0.33.0"
async-compression = { version = "0.4.1", features = ["gzip", "tokio"] }
rand = "0.8.5"
log = "0.4.19"
env_logger = "0.10.0"
jsonl = "4.0.1"
tempfile = "3.7.0"
actix-files = "0.6.2"
auth = { git = "https://github.com/Lucent-Labs/auth", branch = "main" }
actix-request-identifier = "4.1.0"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing = "0.1.37"
#sp-api = { path = "../../../sp-api" }
sp-api = { git = "https://git@github.com/rocketsource/sp-api.git", branch = "master" }
governor = "0.5.1"
rustc-hash = "1.1.0"
async-recursion = "1.0.4"

[dev-dependencies]
fake = { version = "2.6.1", features = ["derive","chrono"] }

